# m4opt-observing-scenarios

./: .gitignore  Makefile  README.md  pyproject.toml
scripts/: area-distance.py  detection_probability.py  events-ecsv.py  luminosity-functions.ipynb  selected-detected.py  slurm-schedule-absmag-dstn.py  slurm-schedule-absmag-fixed.py  unpack-observing-scenarios.py
tables/: selected-detected.tex
