[project]
name = "m4opt-paper"
version = "0.0.0"
description = "UVEX EMGW observing scenarios"
authors = [
    {name = "Leo Singer",email = "leo.p.singer@nasa.gov"}
]
# FIXME: CPLEX does not yet support Python 3.13 and newer.
# See https://ibm-data-and-ai.ideas.ibm.com/ideas/CPLEX-I-148
requires-python = ">=3.11, <3.13"
dependencies = [
    "cplex",
    "dask-jobqueue",
    "dask[diagnostics]",
    "ipykernel",
    "ipython",
    "m4opt >=2.2.0",
]

[tool.codespell]
ignore-words-list = """
    multline,
    ToO,
    ToOs,
"""
skip = """
    m4opt.bib,
    poetry.lock,
    Makefile,
"""
